--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,9 +10,7 @@
         <meta property="og:description" content="Thee's Music App" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <%= stylesheet_link_tag('application', :media => 'all') %>
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 
