--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,10 +12,9 @@
         
         <%= stylesheet_link_tag('application', :media => 'all') %>
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-
     </head>
     <body>
+        <%= render(:partial => "add_song_modal") %>
         <nav>
             <p class="text-center" style="font-size:2em; margin:0px;"><b>MATTCHET MUSIC</b></p>
             <ul class="text-center" style="width:100%; margin:0px; padding:0px; border-bottom:2px solid black;">
