Created 'Edit Song' Feature

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,7 @@
     </head>
     <body>
         <%= render(:partial => "add_song_modal") %>
+        <%= render(:partial => "edit_song_modal") %>
         <nav>
             <p class="text-center" style="font-size:2em; margin:0px;"><b>MATTCHET MUSIC</b></p>
             <ul class="text-center" style="width:100%; margin:0px; padding:0px; border-bottom:2px solid black;">
