--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
         <%= render(:partial => "add_song_modal") %>
         <%= render(:partial => "edit_song_modal") %>
         <nav>
-            <p class="text-center" style="font-size:2em; margin:0px;"><b>MATTCHET MUSIC</b></p>
+            <p class="text-center" style="font-size:2em; margin:0px;"><b></span>MATTCHET MUSIC</b></p>
             <ul class="text-center" style="width:100%; margin:0px; padding:0px; border-bottom:2px solid black;">
                 <a href="#add-song-modal" data-toggle="modal"><li style="display:inline-block; padding:10px;">Add Track</li></a>
                <li style="display:inline-block; padding:10px;"><span class="glyphicon glyphicon-chevron-down"></span> Playlists
