--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -7,7 +7,7 @@
 	<% @songs.each do |song| %>
 	<% artist = song.artist.try(:artist).to_s %>
 	<tr>
-		<td><%= link_to("Edit", "#edit-song-modal", "data-toggle" => "modal", :id => song.id) %></td>
+		<td><%= link_to('<span class="glyphicon glyphicon-pencil"></span>'.html_safe, "#edit-song-modal", "data-toggle" => "modal", :id => song.id) %></td>
 		<td><%= link_to(song.title, 'https://www.youtube.com/results?search_query=' + song.title + ' ' + artist, target: "_blank") %></td>
 		<td><%= artist %></td>
 		<td></td>
