--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require bootstrap.min
  *= require_tree .
  *= require_self
+ *= require global
  */
 
 /* Override Bootstrap default fonts location */
