--- a/app/views/songs/_add_song_modal.html.erb
+++ b/app/views/songs/_add_song_modal.html.erb
@@ -7,7 +7,7 @@
       </div>
       <div class="modal-body">
       
-      <%= form_tag(:action => 'add_song') do %>
+      <%= form_tag(:action => 'create') do %>
         
         <div class="form-group">
           <label for="first-name">Title *</label>
