--- a/app/views/songs/_edit_song_modal.html.erb
+++ b/app/views/songs/_edit_song_modal.html.erb
@@ -7,29 +7,8 @@
       </div>
       <div class="modal-body">
       
-      <%= form_tag({:action => 'update'}) do %>
-        
-        <div class="form-group">
-          <label for="song">Song: </label>
-          <%= text_field(:song, :title) %>
-        </div>
-        <div class="form-group">
-          <label for="artist">Artist: </label>
-          <%= text_field(:artist, :artist) %>
-        </div>
-        <%= button_tag(type: 'submit', class: "btn btn-primary") do %>
-          <span class="glyphicon glyphicon-pencil"></span> Edit Song
-        <% end %>
-
-      <% end %>
-
-      <%= form_tag({:action => 'destroy'}) do %><br>
-
-        <%= button_tag(type: 'submit', class: "btn btn-danger") do %>
-          <span class="glyphicon glyphicon-remove"></span> Delete Song
-        <% end %>
-
-      <% end %>
+        <%= render(:partial => "edit_song_form") %>
+        <%= render(:partial => "delete_song_form") %>
       
       </div>
     </div>          
