--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,43 +3,43 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Mattchet Music</title>
-        <meta property="og:description" content="Thee's Music App" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Mattchet Music</title>
+    <meta property="og:description" content="Thee's Music App" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        <%= stylesheet_link_tag('application', :media => 'all') %>
+    <%= stylesheet_link_tag('application', :media => 'all') %>
 
-    </head>
-    <body>
+  </head>
+  <body>
         
-        <% if !flash[:notice].blank? %>
-            <div class="notice">
-                <%= flash[:notice].html_safe %>
-            </div>
-        <% end %>
+    <% if !flash[:notice].blank? %>
+      <div class="notice">
+        <%= flash[:notice].html_safe %>
+      </div>
+    <% end %>
 
-        <%= render(:partial => "add_song_modal") %>
-        <%= render(:partial => "edit_song_modal") %>
+    <%= render(:partial => "add_song_modal") %>
+    <%= render(:partial => "edit_song_modal") %>
         
+    <header>
+      <div class="container">
+        <p class="text-center p-top-10 col-xs-12" id="logo">
+          <span class="vert-middle"><%= image_tag('logo.png', :alt => 'logo', :style => [ 'height:1.5em;']) %> <b>MATTCHET MUSIC</b></span>
+        </p>
         <nav>
-            <p class="text-center" style="font-size:2em; margin:0px;"><b></span>MATTCHET MUSIC</b></p>
-            <ul class="text-center" style="width:100%; margin:0px; padding:0px; border-bottom:2px solid black;">
-                <a href="#add-song-modal" data-toggle="modal"><li style="display:inline-block; padding:10px;">Add Track</li></a>
-               <li style="display:inline-block; padding:10px;"><span class="glyphicon glyphicon-chevron-down"></span> Playlists
-                    <ul>
-                         <form action="index.php" method="post" id="yo">
-                            <a href="#" onclick="document.getElementById('yo').submit();"> <li><input type="hidden" name="genre" value="all">All</li></a>
-                        </form>
-                        <form action="index.php" method="post" id="yoy">
-                            <a href="#" onclick="document.getElementById('yoy').submit();"> <li><input type="hidden" name="genre" value="playlist_thee_party_mix">Thee's Party Mix</li></a>
-                        </form>
-                        <form action="index.php" method="post" id="yoyy">
-                            <a href="#" onclick="document.getElementById('yoyy').submit();"> <li><input type="hidden" name="genre" value="playlist_old_school">Old School Hip Hop</li></a>
-                        </form>
-                    </ul>
-                </li>
-            </ul>
-       </nav>
+          <ul class="list-unstyled text-center col-xs-12">
+            <%= link_to('<li class="inline-block p-10">Add Track</li>'.html_safe, "#add-song-modal", "data-toggle" => "modal") %>
+            <li class="inline-block p-10"><span class="glyphicon glyphicon-chevron-down"></span> Playlists
+              <ul>
+                <li>All</li>
+                <li>Thee's Party Mix</li>
+                <li>Old School Hip Hop</li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
