Added error message and validations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
-<%= render(:partial => "layouts/header") %>
+<%= render(:partial => "/application/header") %>
 
 	<%= yield %>
 
-<%= render(:partial => "layouts/footer") %>
+<%= render(:partial => "/application/footer") %>
 
