--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,6 +1,6 @@
 <table class='table table-striped'>
 	<th></th>
-	<th><%= @count %></th>
+	<th>Title</th>
 	<th>Artist</th>
 	<th>Feautured Artists</th>
 
