--- a/app/views/songs/_edit_song_form.html.erb
+++ b/app/views/songs/_edit_song_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_tag({:action => 'update'}) do %>
   
   <div class="form-group">
-    <label for="song">Song: </label>
+    <%= label_tag :title, 'Title: ' %>
     <%= text_field(:song, :title) %>
   </div>
   <div class="form-group">
-    <label for="artist">Artist: </label>
+    <%= label_tag :artist, 'Artist: ' %>
     <%= text_field(:artist, :artist) %>
   </div>
   <%= button_tag(type: 'submit', class: "btn btn-primary") do %>
