--- a/app/views/songs/_add_song_form.html.erb
+++ b/app/views/songs/_add_song_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_tag(:action => 'create') do %>
+
 <%= error_messages_for(@song) %>
 
   <div class="form-group">
@@ -9,6 +10,9 @@
     <%= label_tag :artist, 'Artist *' %>
     <%= text_field(:artist, :artist) %>
   </div>
-  <%= submit_tag("Add Song") %>
+  
+  <%= button_tag(type: 'submit', class: "btn btn-primary") do %>
+  	Add Song
+  <% end %>
 
 <% end %>
