--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -26,7 +26,7 @@
 
     <header>
       <div class="container">
-        <p class="text-center p-top-10 col-xs-12" id="logo">
+        <p class="text-center p-top-10 col-xs-12 h3" id="logo">
           <span class="vert-middle"><%= image_tag('logo.png', :alt => 'logo', :style => [ 'height:1.5em;']) %> <b>MATTCHET MUSIC</b></span>
         </p>
         <nav>
