--- a/app/views/songs/_edit_song_modal.html.erb
+++ b/app/views/songs/_edit_song_modal.html.erb
@@ -3,7 +3,11 @@
     <div class="modal-content main-content text-center">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <p class="h2 m-0"><i><b>Edit Song</b></i></p>
+        <p class="h4 m-0 text-center" id="logo">
+          <span class="vert-middle">
+            <%= image_tag('logo.png', :alt => 'logo', :style => [ 'height:1.4em;']) %> <i><b>Add Song</b></i>
+          </span>
+        </p>
       </div>
       <div class="modal-body">
       
