--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
         
     <%= stylesheet_link_tag('application', :media => 'all') %>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
   </head>
   <body>
