--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -22,7 +22,6 @@
       </div>
     <% end %>
 
-    <%= render(:partial => "add_song_modal") %>
     <%= render(:partial => "edit_song_modal") %>
 
     <header>
@@ -32,7 +31,7 @@
         </p>
         <nav>
           <ul class="list-unstyled text-center col-xs-12">
-            <%= link_to('<li class="inline-block p-10">Add Track</li>'.html_safe, "#add-song-modal", "data-toggle" => "modal") %>
+            <%= link_to('<li class="inline-block p-10">Add Track</li>'.html_safe, {:action => 'new'}) %>
             <li class="inline-block p-10"><span class="glyphicon glyphicon-chevron-down"></span> Playlists
               <ul>
                 <li>All</li>
