Refactor, add home link to header

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -22,12 +22,12 @@
       </div>
     <% end %>
 
-    <%= render(:partial => "edit_song_modal") %>
-
     <header>
       <div class="container">
         <p class="text-center p-top-10 col-xs-12 h3" id="logo">
-          <span class="vert-middle"><%= image_tag('logo.png', :alt => 'logo', :style => [ 'height:1.5em;']) %> <b>MATTCHET MUSIC</b></span>
+          <span class="vert-middle">
+            <%= link_to(image_tag('logo.png', :alt => 'logo', :style => [ 'height:1.5em;']) + ' <b>MATTCHET MUSIC</b>'.html_safe, {:action => 'index'}) %> 
+          </span>
         </p>
         <nav>
           <ul class="list-unstyled text-center col-xs-12">
