--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,15 @@
 }
 
 /* ==========================================================================
+ 	Global
+   ========================================================================== */
+
+ header a, header a:hover {
+ 	color:inherit;
+ 	text-decoration:none;
+ }
+
+/* ==========================================================================
  	Helper Classes
    ========================================================================== */
 
