--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -17,7 +17,7 @@
 	<% @songs.each do |song| %>
 	<% artist = song.artist.try(:artist).to_s %>
 	<tr>
-		<td><%= link_to('<span class="glyphicon glyphicon-pencil"></span>'.html_safe, {:action => 'edit', :id => song.id}) %></td>
+		<td><%= link_to('<span class="glyphicon glyphicon-pencil"></span>'.html_safe, {:action => 'edit', :id => song.id, :artist_id => song.artist_id}) %></td>
 		<td><%= link_to(song.title, 'https://www.youtube.com/results?search_query=' + song.title + ' ' + artist, target: "_blank") %></td>
 		<td><%= artist %></td>
 		<td></td>
