--- a/app/views/songs/_edit_song_form.html.erb
+++ b/app/views/songs/_edit_song_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag({:action => 'update', :id => @song}) do %>
+<%= form_tag({:action => 'update', :id => @song, :artist_id => @artist}) do %>
   
   <div class="form-group">
     <%= label_tag :title, 'Title: ' %>
