--- a/app/views/songs/_edit_song_form.html.erb
+++ b/app/views/songs/_edit_song_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag({:action => 'update', :id => @song, :artist_id => @artist}) do %>
+<%= form_tag({:action => 'update', :song_id => @song, :artist_id => @artist}) do %>
 
 <%= error_messages_for(@song) %>
   
