--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,1 +1,7 @@
-<%= render(:partial => "add_song_form") %>
+<div id="new-song-page">
+	<div class="container text-center" id="new-song-container">
+		<div class="vert-middle">
+			<%= render(:partial => "add_song_form") %>
+		</div>
+	</div>
+</div>
