--- a/app/views/songs/_add_song_form.html.erb
+++ b/app/views/songs/_add_song_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(:action => 'create') do %>
+<%= form_tag({:action => 'create'}, {:class => 'p-vert-50 m-center inline-block', :id => 'add-form'}) do %>
 
 <%= error_messages_for(@song) %>
 
