--- a/app/assets/stylesheets/songs.css
+++ b/app/assets/stylesheets/songs.css
@@ -1,3 +1,6 @@
+/* ==========================================================================
+ 	songs/new.html
+   ========================================================================== */
 
 #new-song-page {
 	background-image:url('../assets/music-wallpaper.jpg');
