--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,6 +1,10 @@
+<!-- Instance Variables !-->
+<% @page_title = "Mattchet Music | Library" %>
+<!-- End Instance Variables !-->
+
+
 <%= render(:partial => "edit_song_modal") %>
 <%= render(:partial => "delete_song_modal") %>
-
 
 <!-- If there is a @song value to edit then open the #edit-song-modal on page load !-->
 <% if !@song.blank? && !(params[:action] == 'delete') %>
@@ -11,6 +15,7 @@
 	</script>
 <% end %>
 
+<!-- If there is a @song value to delete then open the #delete-song-modal on page load !-->
 <% if !@song.blank? && (params[:action] == 'delete') %>
 	<script>
 		$(document).ready(function(){
