--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,3 +1,8 @@
+<!-- Instance Variables !-->
+<% @page_title = "Mattchet Music | Add Song" %>
+<!-- End Instance Variables !-->
+
+
 <div id="new-song-page">
 	<div class="container text-center" id="new-song-container">
 		<div class="vert-middle">
