--- a/app/views/playlists/_add_playlist_modal.html.erb
+++ b/app/views/playlists/_add_playlist_modal.html.erb
@@ -1,7 +1,7 @@
 <!-- Variables !-->
-<% @modal_id = "delete-song-modal"
-@modal_title = "Delete Song" 
-@modal_form = "/songs/delete_song_form" %>
+<% @modal_id = "add-playlist-modal"
+@modal_title = "Create Playlist" 
+@modal_form = "/playlists/add_playlist_form" %>
 
 <!-- End Instance Variables !-->
       
