--- a/app/views/songs/_edit_song_modal.html.erb
+++ b/app/views/songs/_edit_song_modal.html.erb
@@ -1,8 +1,8 @@
 <!-- Variables !-->
 <% @modal_id = "edit-song-modal"
 @modal_title = "Edit Song" 
-@modal_form = "edit_song_form" %>
+@modal_form = "/songs/edit_song_form" %>
 
 <!-- End Instance Variables !-->
       
-<%= render(:partial => "modals_template") %>
+<%= render(:partial => "/application/modals_template") %>
