--- a/app/views/playlists/_add_playlist_form.html.erb
+++ b/app/views/playlists/_add_playlist_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(:playlist, :url => {:action => 'create'}) do |f| %>
+<%= form_for(:playlist, :url => {:action => 'create_name'}) do |f| %>
 
 <%= error_messages_for(@playlist) %>
   
