--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -26,7 +26,7 @@
       <div class="container">
         <p class="text-center p-top-10 col-xs-12 h3" id="logo">
           <span class="vert-middle">
-            <%= link_to(image_tag('logo.png', :alt => 'logo', :style => [ 'height:1.5em;']) + ' <b>MATTCHET MUSIC</b>'.html_safe, {:action => 'index'}) %> 
+            <%= link_to(image_tag('logo.png', :alt => 'logo', :style => [ 'height:1.5em;']) + ' <b>MATTCHET MUSIC</b>'.html_safe, {:controller => 'songs', :action => 'index'}) %> 
           </span>
         </p>
         <nav>
