--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -35,9 +35,10 @@
             <%= link_to('<li class="inline-block p-10">Create Playlist</li>'.html_safe, {:controller => 'playlists', :action => 'new'}) %>
             <li class="inline-block p-10"><span class="glyphicon glyphicon-chevron-down"></span> Playlists
               <ul>
-                <li>All</li>
-                <li>Thee's Party Mix</li>
-                <li>Old School Hip Hop</li>
+                <% @playlists = Playlist.all %>
+                <% @playlists.each do |playlist| %>
+                  <%= link_to('<li>'.html_safe + playlist.playlist + '</li></a>'.html_safe, {:controller => 'playlists', :action => 'show'}) %>
+                <% end %>
               </ul>
             </li>
           </ul>
