--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -29,15 +29,26 @@
             <%= link_to(image_tag('logo.png', :alt => 'logo', :style => [ 'height:1.5em;']) + ' <b>MATTCHET MUSIC</b>'.html_safe, {:controller => 'songs', :action => 'index'}) %> 
           </span>
         </p>
+        <!-- Conditional to show "Playlist Name Heading" !-->
+        <% if params[:controller] == 'playlists' && params[:action] == 'show' %>
+          <p class="text-center"><%= @playlist.playlist %></p>
+        <% end %>
+        <!-- End Conditional !-->
         <nav>
           <ul class="list-unstyled text-center col-xs-12">
-            <%= link_to('<li class="inline-block p-10">Add Track</li>'.html_safe, {:controller => 'songs', :action => 'new'}) %>
-            <%= link_to('<li class="inline-block p-10">Create Playlist</li>'.html_safe, {:controller => 'playlists', :action => 'new'}) %>
+            <!-- Conditional to show "Playlist Name Heading" !-->
+        <% if params[:controller] == 'playlists' && params[:action] == 'show' %>
+          <%= link_to('<li class="inline-block p-10">Edit Playlist</li>'.html_safe, {:controller => 'playlists', :action => 'edit', :playlist_id => @playlist.id}) %>
+          <% else %>
+           <%= link_to('<li class="inline-block p-10">Add Track</li>'.html_safe, {:controller => 'songs', :action => 'new'}) %>
+           <%= link_to('<li class="inline-block p-10">Create Playlist</li>'.html_safe, {:controller => 'playlists', :action => 'new'}) %>
+        <% end %>
+        <!-- End Conditional !-->
             <li class="inline-block p-10"><span class="glyphicon glyphicon-chevron-down"></span> Playlists
               <ul>
                 <% @playlists = Playlist.all %>
                 <% @playlists.each do |playlist| %>
-                  <%= link_to('<li>'.html_safe + playlist.playlist + '</li></a>'.html_safe, {:controller => 'playlists', :action => 'show'}) %>
+                  <%= link_to('<li>'.html_safe + playlist.playlist + '</li></a>'.html_safe, {:controller => 'playlists', :action => 'show', :playlist_id => playlist.id}) %>
                 <% end %>
               </ul>
             </li>
