--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -4,6 +4,7 @@
 <%= render(:partial => "/songs/edit_song_modal") %>
 <%= render(:partial => "/songs/delete_song_modal") %>
 <%= render(:partial => "/playlists/add_playlist_modal") %>
+<%= render(:partial => "/playlists/edit_playlist_modal") %>
 
 <!-- ********** Conditionals to display the required Modal ********** !-->
 
@@ -34,9 +35,18 @@
 	</script>
 <% end %>
 
-<!-- ********** END Conditionals for Modals ********** !-->
+<!-- open #edit-playlist-modal on page load !-->
+<% if (params[:action] == 'edit' && params[:controller] == 'playlists') %>
+	<script>
+		$(document).ready(function(){
+    		$("#edit-playlist-modal").modal("show");
+		});
+	</script>
+<% end %>
 
-<!-- Conditional to show "Create Playlist Message" !-->
+<!-- ********** END Modals ********** !-->
+
+<!-- Conditional to show "Create Playlist Heading" !-->
 <% if params[:controller] == 'playlists' && params[:action] == 'create_name' %>
 	
 	<p class="text-center">Check songs to be add to playlist and then click create.</p>
@@ -51,7 +61,6 @@
 	<% end %>
 
 <% end %>
-<!-- End Conditional !-->
 
 <table class='table table-striped'>
 	<th></th>
@@ -60,7 +69,7 @@
 	<th>Feautured Artists</th>
 
 	<% if params[:action] == 'create_name' && params[:controller] == 'playlists' %>
-		<%= form_for(:song, :url => {:controller => 'playlists', :action => 'add_songs', :id => @playlist_id}, html: {id: "create-playlist"}) do |f| %>
+		<%= form_for(:song, :url => {:controller => 'playlists', :action => 'create_songs', :id => @playlist_id}, html: {id: "create-playlist"}) do |f| %>
 			
 			<% @songs.each do |song| %>
 				<% artist = song.artist.try(:artist).to_s %>
