--- a/app/views/playlists/_edit_playlist_form.html.erb
+++ b/app/views/playlists/_edit_playlist_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag({:action => 'update'}) do %>
+<%= form_tag({:action => 'update', :playlist_id => @playlist_id}) do %>
 
 <%= error_messages_for(@playlist) %>
   
