--- a/app/views/playlists/_edit_playlist_form.html.erb
+++ b/app/views/playlists/_edit_playlist_form.html.erb
@@ -1,6 +1,14 @@
 <%= form_tag({:action => 'update', :playlist_id => @playlist_id}) do %>
 
-<%= error_messages_for(@playlist) %>
+<% if params[:error] == 'yes' %>
+  <div id="errorExplanation">
+    <p class="h4">An error prohibited this record from being saved</p>
+    <p>There were problems with the following fields:</p>
+    <ul>
+      <li>Playlist name is already taken.</li>
+    </ul>
+  </div>
+<% end %>
   
   <div class="form-group">
     <%= label_tag :playlist, 'Name: ' %>
