--- a/app/views/playlists/_edit_playlist_form.html.erb
+++ b/app/views/playlists/_edit_playlist_form.html.erb
@@ -20,7 +20,7 @@
 
 <% end %>
 
-<%= form_tag({:action => 'delete', :song_id => @song, :artist_id => @artist}) do %><br>
+<%= form_tag({:action => 'delete', :playlist_id => @playlist_id}) do %><br>
 
   <%= button_tag(type: 'submit', class: "btn btn-danger") do %>
     <span class="glyphicon glyphicon-remove"></span> Delete playlist
