--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -30,7 +30,7 @@
           </span>
         </p>
         <!-- Conditional to show "Playlist Name Heading" !-->
-        <% if params[:controller] == 'playlists' && (params[:action] == 'show' || params[:action] == 'edit') %>
+        <% if params[:controller] == 'playlists' && (params[:action] == 'show' || params[:action] == 'edit' || params[:action] == 'delete') %>
           <p class="text-center"><%= @playlist.playlist %></p>
         <% end %>
         <!-- End Conditional !-->
