--- a/app/views/playlists/_delete_playlist_form.html.erb
+++ b/app/views/playlists/_delete_playlist_form.html.erb
@@ -1,9 +1,9 @@
 <p class="m-0"><b>Are you sure you want to delete this playlist?</b></p>
       
-<%= form_tag({:action => 'destroy', :song_id => @song, :artist_id => @artist}) do %><br>
+<%= form_tag({:action => 'destroy', :playlist_id => @playlist_id}) do %><br>
 
   <%= button_tag(type: 'submit', class: "btn btn-danger") do %>
-    <span class="glyphicon glyphicon-remove"></span> Delete Song
+    <span class="glyphicon glyphicon-remove"></span> Delete Playlist
   <% end %>
 
 <% end %>
