Organized partials into folders

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,7 +41,7 @@ html, body {
 }
 
 /* ==========================================================================
- 	Helper Classes
+ 	Shortcut Classes
    ========================================================================== */
 
 .m-0 {
