--- a/app/views/playlists/modals/_delete_playlist_modal.html.erb
+++ b/app/views/playlists/modals/_delete_playlist_modal.html.erb
@@ -1,7 +1,7 @@
 <!-- Variables !-->
-<% @modal_id = "delete-song-modal"
+<% @modal_id = "delete-playlist-modal"
 @modal_title = "Delete Song" 
-@modal_form = "/songs/delete_song_form" %>
+@modal_form = "/playlists/forms/delete_playlist_form" %>
 
 <!-- End Instance Variables !-->
       
