--- a/app/views/songs/modals/_edit_song_modal.html.erb
+++ b/app/views/songs/modals/_edit_song_modal.html.erb
@@ -1,7 +1,7 @@
 <!-- Variables !-->
-<% @modal_id = "edit-playlist-modal"
-@modal_title = "Edit Playlist" 
-@modal_form = "/playlists/edit_playlist_form" %>
+<% @modal_id = "edit-song-modal"
+@modal_title = "Edit Song" 
+@modal_form = "/songs/forms/edit_song_form" %>
 
 <!-- End Instance Variables !-->
       
