--- a/app/views/songs/modals/_delete_song_modal.html.erb
+++ b/app/views/songs/modals/_delete_song_modal.html.erb
@@ -1,7 +1,7 @@
 <!-- Variables !-->
-<% @modal_id = "delete-playlist-modal"
+<% @modal_id = "delete-song-modal"
 @modal_title = "Delete Song" 
-@modal_form = "/playlists/delete_playlist_form" %>
+@modal_form = "/songs/forms/delete_song_form" %>
 
 <!-- End Instance Variables !-->
       
