--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -6,7 +6,7 @@
 <div id="new-song-page">
 	<div class="container text-center" id="new-song-container">
 		<div class="vert-middle">
-			<%= render(:partial => "add_song_form") %>
+			<%= render(:partial => "/songs/forms/add_song_form") %>
 		</div>
 	</div>
 </div>
