Redirect on modal close

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -54,6 +54,25 @@
 	</script>
 <% end %>
 
+
+
+
+
+
+
+<script>
+$('#add-playlist-modal').on('hidden.bs.modal', function () {
+window.location.assign("redirect_index")
+});
+</script>
+
+
+
+
+
+
+
+
 <!-- ********** END Modals ********** !-->
 
 <!-- Conditional to show "Create Playlist Heading" !-->
